JIEN-9 JIEN-10 setting up admin

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -11,7 +11,6 @@ resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.layout.layout = "default"
 
 settings.salt = "changeme"
-
 settings.memcache_host = "127.0.0.1"
 settings.memcache_port = "11211"
 
@@ -21,11 +20,13 @@ resources.multidb.db.username = test
 resources.multidb.db.password = test
 resources.multidb.db.dbname = jien
 resources.multidb.db.default = true
+resources.multidb.db.profiler = true
 
 resources.multidb.masterdb.adapter = PDO_MYSQL
 resources.multidb.masterdb.host = 127.0.0.1
 resources.multidb.masterdb.username = test
 resources.multidb.masterdb.password = test
 resources.multidb.masterdb.dbname = jien
+resources.multidb.masterdb.profiler = true
 
 [dev : production]
