added disqus id to config

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,4 +1,4 @@
-[production]
+[prod]
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 phpSettings.date.timezone = "UTC"
@@ -13,6 +13,7 @@ resources.layout.layout = "default"
 settings.salt = "changeme"
 settings.memcache_host = "127.0.0.1"
 settings.memcache_port = "11211"
+settings.disqus_id = "jienframework";"
 
 resources.multidb.db.adapter = PDO_MYSQL
 resources.multidb.db.host = 127.0.0.1
@@ -29,4 +30,5 @@ resources.multidb.masterdb.password = test
 resources.multidb.masterdb.dbname = jien
 resources.multidb.masterdb.profiler = true
 
-[dev : production]
+[dev : prod]
+settings.disqus_id = "jienlocal";
