fixed some config

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -13,7 +13,8 @@ resources.layout.layout = "default"
 settings.salt = "changeme"
 settings.memcache_host = "127.0.0.1"
 settings.memcache_port = "11211"
-settings.disqus_id = "jienframework";"
+settings.disqus_id = "jienframework"
+settings.twitter_id = "jaequery"
 
 resources.multidb.db.adapter = PDO_MYSQL
 resources.multidb.db.host = 127.0.0.1
