fixed some config

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -32,4 +32,4 @@ resources.multidb.masterdb.dbname = jien
 resources.multidb.masterdb.profiler = true
 
 [dev : prod]
-settings.disqus_id = "jienlocal";
+settings.disqus_id = "jienlocal"
