--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -16,6 +16,15 @@ settings.memcache_port = "11211"
 settings.disqus_id = "jienframework"
 settings.twitter_id = "jaequery"
 
+settings.facebook_appid = 133607673409609
+settings.facebook_secret = b0b291989cd2f29c027d159cb9a2f89f
+settings.facebook_redirecturi = http://jien.jaequery.com/user/login/
+settings.facebook_scope = email
+
+settings.twitter_appid = EPgW9g4MKYkQOYUhPKIhnQ
+settings.twitter_secret = RU2FIwfhdfjALUMQitOu1zkF0xOd5Ui9NDPaLqNdTk
+settings.twitter_redirecturi = http://jien.local/user/login/
+
 resources.multidb.db.adapter = PDO_MYSQL
 resources.multidb.db.host = 127.0.0.1
 resources.multidb.db.username = test
@@ -33,3 +42,12 @@ resources.multidb.masterdb.profiler = true
 
 [dev : prod]
 settings.disqus_id = "jienlocal"
+
+settings.facebook_appid = 115212358590147
+settings.facebook_secret = 79dfb268375df239eb4dee65d66186d0
+settings.facebook_redirecturi = http://jien.local/user/login/
+settings.facebook_scope = email
+
+settings.twitter_appid = fGZ61x2Xi4b0bpSEUf7HA
+settings.twitter_secret = JIOWFevWZKbCa2cGYZkYV8qsXKByNEDp7361YHiM
+settings.twitter_redirecturi = http://jien.local/user/login/
