jien-58 save fb/twitter authentication to db

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -23,7 +23,7 @@ settings.facebook_scope = email
 
 settings.twitter_appid = EPgW9g4MKYkQOYUhPKIhnQ
 settings.twitter_secret = RU2FIwfhdfjALUMQitOu1zkF0xOd5Ui9NDPaLqNdTk
-settings.twitter_redirecturi = http://jien.local/user/login/
+settings.twitter_redirecturi = http://jien.jaequery.com/user/login/
 
 resources.multidb.db.adapter = PDO_MYSQL
 resources.multidb.db.host = 127.0.0.1
