--- a/application/configs/keys.ini
+++ b/application/configs/keys.ini
@@ -1,19 +1,7 @@
-[prod]
-facebook.appid = 133607673409609
-facebook.secret = b0b291989cd2f29c027d159cb9a2f89f
-facebook.redirecturi = http://jien.jaequery.com/user/login/
-facebook.scope = email
-
-twitter.appid = EPgW9g4MKYkQOYUhPKIhnQ
-twitter.secret = RU2FIwfhdfjALUMQitOu1zkF0xOd5Ui9NDPaLqNdTk
-twitter.redirecturi = http://jien.local/user/login/
-
-[dev : prod]
-facebook.appid = 115212358590147
-facebook.secret = 79dfb268375df239eb4dee65d66186d0
-facebook.redirecturi = http://jien.local/user/login/
-facebook.scope = email
-
-twitter.appid = fGZ61x2Xi4b0bpSEUf7HA
-twitter.secret = JIOWFevWZKbCa2cGYZkYV8qsXKByNEDp7361YHiM
-twitter.redirecturi = http://jien.local/user/login/
+openid.tofetch.email = true
+openid.tofetch.country = true
+openid.tofetch.language = false
+openid.tofetch.gender = false
+openid.tofetch.firstname = false
+openid.tofetch.lastname = false
+openid.tofetch.fullname = false
