updated application.ini dev settings

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -55,3 +55,18 @@ settings.facebook_scope = email
 settings.twitter_appid = fGZ61x2Xi4b0bpSEUf7HA
 settings.twitter_secret = JIOWFevWZKbCa2cGYZkYV8qsXKByNEDp7361YHiM
 settings.twitter_redirecturi = http://jien.local/user/login/
+
+resources.multidb.db.adapter = PDO_MYSQL
+resources.multidb.db.host = 127.0.0.1
+resources.multidb.db.username = jien
+resources.multidb.db.password = j
+resources.multidb.db.dbname = jien
+resources.multidb.db.default = true
+resources.multidb.db.profiler = true
+
+resources.multidb.masterdb.adapter = PDO_MYSQL
+resources.multidb.masterdb.host = 127.0.0.1
+resources.multidb.masterdb.username = jien
+resources.multidb.masterdb.password = j
+resources.multidb.masterdb.dbname = jien
+resources.multidb.masterdb.profiler = true
