changed application.ini redirecuri locations for dev

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -49,12 +49,12 @@ settings.disqus_id = "jienlocal"
 
 settings.facebook_appid = 172079929527082
 settings.facebook_secret = 4412cd85765ad3f2df799acb96158ce4
-settings.facebook_redirecturi = http://www.tpxdev.com/user/login/
+settings.facebook_redirecturi = http://tpx.local/user/login/
 settings.facebook_scope = email
 
 settings.twitter_appid = fGZ61x2Xi4b0bpSEUf7HA
 settings.twitter_secret = JIOWFevWZKbCa2cGYZkYV8qsXKByNEDp7361YHiM
-settings.twitter_redirecturi = http://jien.local/user/login/
+settings.twitter_redirecturi = http://tpx.local/user/login/
 
 resources.multidb.db.adapter = PDO_MYSQL
 resources.multidb.db.host = 127.0.0.1
