--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -18,12 +18,12 @@ settings.twitter_id = "jaequery"
 
 settings.facebook_appid = 172079929527082
 settings.facebook_secret = 4412cd85765ad3f2df799acb96158ce4
-settings.facebook_redirecturi = http://www.tpxdev.com/user/login/
+settings.facebook_redirecturi = http://tpx.local/user/login/
 settings.facebook_scope = email
 
-settings.twitter_appid = EPgW9g4MKYkQOYUhPKIhnQ
-settings.twitter_secret = RU2FIwfhdfjALUMQitOu1zkF0xOd5Ui9NDPaLqNdTk
-settings.twitter_redirecturi = http://jien.jaequery.com/user/login/
+settings.twitter_appid = aTBEmJP4Vli967igZmHfww
+settings.twitter_secret = 0zXoIgbBaHEloxChH3MwCOk35Z2YkCWbITqjPm0d04
+settings.twitter_redirecturi = http://tpx.local/user/login/
 
 settings.memcache_host = "127.0.0.1"
 settings.memcache_port = "11211"
@@ -52,8 +52,8 @@ settings.facebook_secret = 4412cd85765ad3f2df799acb96158ce4
 settings.facebook_redirecturi = http://tpx.local/user/login/
 settings.facebook_scope = email
 
-settings.twitter_appid = fGZ61x2Xi4b0bpSEUf7HA
-settings.twitter_secret = JIOWFevWZKbCa2cGYZkYV8qsXKByNEDp7361YHiM
+settings.twitter_appid = aTBEmJP4Vli967igZmHfww
+settings.twitter_secret = 0zXoIgbBaHEloxChH3MwCOk35Z2YkCWbITqjPm0d04
 settings.twitter_redirecturi = http://tpx.local/user/login/
 
 resources.multidb.db.adapter = PDO_MYSQL
