moved layouts to the views to keep it in one folder

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -7,11 +7,11 @@ bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
-resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 
 settings.salt = "changeme"
 
 resources.layout.layout = "default"
+resources.layout.layoutPath = APPLICATION_PATH "/views/default/layouts"
 
 settings.disqus_id = "jienframework"
 settings.twitter_id = "jaequery"
