--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -58,15 +58,15 @@ settings.twitter_redirecturi = http://tpx.local/user/login/
 
 resources.multidb.db.adapter = PDO_MYSQL
 resources.multidb.db.host = 127.0.0.1
-resources.multidb.db.username = jien
+resources.multidb.db.username = root
 resources.multidb.db.password = j
-resources.multidb.db.dbname = jien
+resources.multidb.db.dbname = tpx
 resources.multidb.db.default = true
 resources.multidb.db.profiler = true
 
 resources.multidb.masterdb.adapter = PDO_MYSQL
 resources.multidb.masterdb.host = 127.0.0.1
-resources.multidb.masterdb.username = jien
+resources.multidb.masterdb.username = root
 resources.multidb.masterdb.password = j
-resources.multidb.masterdb.dbname = jien
+resources.multidb.masterdb.dbname = tpx
 resources.multidb.masterdb.profiler = true
