test update profile method available

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -60,7 +60,7 @@ resources.multidb.db.adapter = PDO_MYSQL
 resources.multidb.db.host = 127.0.0.1
 resources.multidb.db.username = root
 resources.multidb.db.password = j
-resources.multidb.db.dbname = tpx
+resources.multidb.db.dbname = jien
 resources.multidb.db.default = true
 resources.multidb.db.profiler = true
 
@@ -68,5 +68,5 @@ resources.multidb.masterdb.adapter = PDO_MYSQL
 resources.multidb.masterdb.host = 127.0.0.1
 resources.multidb.masterdb.username = root
 resources.multidb.masterdb.password = j
-resources.multidb.masterdb.dbname = tpx
+resources.multidb.masterdb.dbname = jien
 resources.multidb.masterdb.profiler = true
